Configuração inicial realizada

--- a/app.json
+++ b/app.json
@@ -21,10 +21,14 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.brunodsazevedo.pagseguroplugpagdemo"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "react-native-pagseguro-plugpag"
+    ]
   }
 }
