--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@types/react": "~18.2.14",
     "expo": "~49.0.7",
+    "expo-dev-client": "~2.4.8",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-pagseguro-plugpag": "^0.1.1-beta.0",
+    "typescript": "^5.1.3",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
