--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
+        <data android:scheme="pagseguro-plugpag-demo"/>
         <data android:scheme="com.brunodsazevedo.pagseguroplugpagdemo"/>
         <data android:scheme="exp+pagseguro-plugpag-demo"/>
       </intent-filter>
