--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pagseguro-plugpag-demo",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -11,13 +11,19 @@
   "dependencies": {
     "@types/react": "~18.2.14",
     "expo": "~49.0.7",
+    "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.8",
+    "expo-linking": "~5.0.2",
+    "expo-router": "2.0.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-pagseguro-plugpag": "^0.1.1-beta.0",
-    "typescript": "^5.1.3",
-    "expo-splash-screen": "~0.20.5"
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-pagseguro-plugpag": "^0.1.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
