--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "expo-router": "2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-pagseguro-plugpag": "^0.1.0",
     "react-native-safe-area-context": "4.6.3",
@@ -26,7 +27,11 @@
     "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@rocketseat/eslint-config": "^2.1.0",
+    "eslint": "^8.48.0",
+    "prettier-plugin-tailwindcss": "^0.5.3",
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
