Feito configurações basicas para navegação

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@types/react": "~18.2.14",
     "expo": "~49.0.7",
     "expo-constants": "~14.4.2",
