--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@types/react": "~18.2.14",
     "expo": "~49.0.7",
@@ -20,18 +21,23 @@
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-pagseguro-plugpag": "^0.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "typescript": "^5.1.3"
+    "react-native-svg": "13.9.0",
+    "tailwind-merge": "^1.14.0",
+    "typescript": "^5.1.3",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@rocketseat/eslint-config": "^2.1.0",
     "eslint": "^8.48.0",
     "prettier-plugin-tailwindcss": "^0.5.3",
+    "react-native-svg-transformer": "^1.1.0",
     "tailwindcss": "3.3.2"
   },
   "private": true
