--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
       "@components/*": [
         "./src/components/*"
       ],
+      "@assets/*": [
+        "./src/assets/*"
+      ],
       "@storage/*": [
         "./src/storage/*"
       ],
