--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "expo-router": "2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "lottie-react-native": "5.1.6",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-native": "0.72.4",
+    "react-native-currency-input": "^1.1.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-pagseguro-plugpag": "^0.1.0",
     "react-native-safe-area-context": "4.6.3",
