--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
     "@hookform/resolvers": "^3.3.1",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@types/react": "~18.2.14",
-    "expo": "~49.0.7",
+    "expo": "^49.0.8",
     "expo-constants": "~14.4.2",
     "expo-dev-client": "~2.4.8",
     "expo-linking": "~5.0.2",
+    "expo-media-library": "^15.4.1",
     "expo-router": "2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "install": "^0.13.0",
+    "intl": "^1.2.5",
     "lottie-react-native": "5.1.6",
+    "luxon": "^3.4.2",
     "nativewind": "^2.0.11",
+    "npx": "^10.2.2",
     "react": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-native": "0.72.4",
@@ -30,6 +35,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-native-view-shot": "^3.7.0",
     "tailwind-merge": "^1.14.0",
     "typescript": "^5.1.3",
     "yup": "^1.2.0"
@@ -37,6 +43,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@rocketseat/eslint-config": "^2.1.0",
+    "@types/luxon": "^3.3.2",
     "eslint": "^8.48.0",
     "prettier-plugin-tailwindcss": "^0.5.3",
     "react-native-svg-transformer": "^1.1.0",
